edits logo name

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <div class="container container--header">
         <nav class="main-nav">
           <a class="logo logo--header" lang="en" href="index.html">
-            <span class="logo--label">Web</span>Studio</a
+            <span class="logo--label">Best</span>Header</a
           >
 
           <ul class="site-nav list">
